agones-integration/agones/agones-ingress.yaml
# Copyright 2019 Google LLC All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Create a single service Ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fleet-allocator-ingress
  labels:
    app: fleet-allocator
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    #kubernetes.io/ingress.allow-http: "true"
    #kubernetes.io/ingress.global-static-ip-name: "allocator-static-ip"
spec:
  # tls:
  # - secretName: allocatorsecret
  backend:
    serviceName: fleet-allocator-backend
    servicePort: 9999
